[package]
name = "fks_nodes"
version = "0.1.0"
edition = "2021"
description = "Master/worker async node network for external API proxying & coordination."

[[bin]]
name = "fks_nodes"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.99"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
reqwest = { version = "0.12.23", features = ["json"] }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.18.0", features = ["v4"] }
axum = { version = "0.8.4", features = ["ws","macros"] }
